--- a/styles/styles.css
+++ b/styles/styles.css
@@ -920,7 +920,7 @@ body {
   display: none;
   width: 216px;
   margin-top: 4px;
-  padding: 15px 18px 18px 22px;
+  padding: 15px 18px 22px 22px;
   font-weight: 400;
   font-size: 16px;
   line-height: 21px;
@@ -1235,7 +1235,7 @@ body {
 
 .price-from:focus,
 .price-to:focus {
-  box-shadow: 0px 0px 0px 3px #81B3D2;
+  box-shadow: 0 0 0 3px #81B3D2;
 }
 
 .price-from:active,
