--- a/styles/styles.css
+++ b/styles/styles.css
@@ -113,9 +113,13 @@ body {
   cursor: pointer;
 }
 
-.button:hover,
+.button:hover {
+  background-color: #68A2CA;
+}
+
 .button:focus {
   background-color: #68A2CA;
+  outline: none;
 }
 
 .button:active {
@@ -132,9 +136,13 @@ body {
   border-radius: 4px;
 }
 
-.button-link:hover,
+.button-link:hover {
+  background-color: #615048;
+}
+
 .button-link:focus {
   background-color: #615048;
+  outline: none;
 }
 
 .button-link:active {
@@ -151,6 +159,7 @@ body {
 
 /* МЕНЮ НАВИГАЦИИ */
 .navigation {
+  z-index: 1;
   position: relative;
   display: flex;
   margin: 0;
@@ -162,6 +171,10 @@ body {
   margin-left: 70px;
   margin-right: 30px;
   margin-bottom: -5px;
+}
+
+.navigation-logo {
+  outline: none;
 }
 
 .navigation-logo img {
@@ -196,6 +209,10 @@ body {
   margin-right: 0;
 }
 
+.navigation-link:focus {
+  outline: none;
+}
+
 .current-site-page::before {
   z-index: 1;
   position: absolute;
@@ -224,6 +241,10 @@ body {
   min-height: 65px;
   margin: 0;
   padding: 0;
+}
+
+.user-link:focus {
+  outline: none;
 }
 
 .user-item:nth-child(1) .user-link {
@@ -499,6 +520,10 @@ body {
   border-radius: 10px 0 0 10px;
 }
 
+.subscription-input:focus {
+  outline: none;
+}
+
 .subscribe {
   width: 200px;
   font-size: 20px;
@@ -537,18 +562,29 @@ body {
   fill: #83B3D3;
 }
 
-.footer-social-link:hover .footer-social-icon,
+.footer-social-link:hover .footer-social-icon {
+  fill: #68A2CA;
+}
+
 .footer-social-link:focus .footer-social-icon {
   fill: #68A2CA;
+}
+
+.footer-social-link:focus {
+  outline: none;
 }
 
 .footer-social-link:active .footer-social-icon {
   fill: rgba(104, 162, 202, 0.3);
 }
 
-.phone:hover,
+.phone:hover {
+  color: #756157;
+}
+
 .phone:focus {
   color: #756157;
+  outline: none;
 }
 
 .phone:active {
@@ -571,9 +607,13 @@ body {
   padding-top: 6px;
 }
 
-.footer-htmlacademy-link:hover,
+.footer-htmlacademy-link:hover {
+  fill: #756157;
+}
+
 .footer-htmlacademy-link:focus {
   fill: #756157;
+  outline: none;
 }
 
 .footer-htmlacademy-link:active {
@@ -629,6 +669,7 @@ body {
 .modal-close:focus {
   background-color: #E6E6E6;
   border: 3px solid #83B3D3;
+  outline: none;
 }
 
 .modal-close:active {
@@ -893,6 +934,7 @@ body {
   background-color: #68A2CA;
   border: 3px solid #756257;
   border-radius: 10px;
+  outline: none;
 }
 
 .modal-button:active {
@@ -959,6 +1001,11 @@ body {
   background-color: #68A2CA;
 }
 
+.tooltip-toggle:focus {
+  background-color: #68A2CA;
+  outline: none;
+}
+
 .tooltip-toggle:hover + .tooltip-text,
 .tooltip-toggle:focus + .tooltip-text {
   display: block;
@@ -1017,6 +1064,10 @@ body {
   fill: rgba(255, 255, 255, 0.6);
 }
 
+.breadcrumbs-item:not(.breadcrumbs-current) .breadcrumbs-link:focus {
+  outline: none;
+}
+
 .breadcrumbs-item:not(.breadcrumbs-current) .breadcrumbs-link:active {
   color: rgba(255, 255, 255, 0.3);
   fill: rgba(255, 255, 255, 0.3);
@@ -1026,8 +1077,10 @@ body {
 .main-inner-header {
   min-height: 403px;
   color: #ffffff;
-  background: #82B3D3 url("../images/background-catalog.jpeg") no-repeat;
-  background-size: 100% auto;
+  background-image: url("../images/background-catalog.jpeg");
+  background-color: #82B3D3;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .main-inner-header-wrapper {
@@ -1039,6 +1092,7 @@ body {
   justify-content: space-between;
   margin: 0;
   padding: 0;
+  padding-bottom: 70px;
   min-height: 149px;
 }
 
@@ -1123,6 +1177,7 @@ body {
 .control-input-checkbox:focus + .control-mark {
   background-color: rgba(255, 255, 255, 0.6);
   border: 3px solid #83B3D3;
+  outline: none;
 }
 
 .control-checkbox:active .control-mark {
@@ -1131,6 +1186,7 @@ body {
 
 .control-input-radio:focus + .control-mark {
   border: 3px solid #83B3D3;
+  outline: none;
 }
 
 .control-input-checkbox[type="checkbox"]:checked + .control-mark {
@@ -1195,6 +1251,10 @@ body {
   margin: 0;
 }
 
+.input-price[type='number'] {
+  -moz-appearance: textfield;
+}
+
 .price-from-wrapper,
 .price-to-wrapper {
   position: relative;
@@ -1248,6 +1308,7 @@ body {
 
 .price-from:focus,
 .price-to:focus {
+  outline: none;
   box-shadow: 0 0 0 3px #81B3D2;
 }
 
@@ -1286,6 +1347,7 @@ body {
 
 .range-toggle:focus {
   border: 3px solid #83B3D3;
+  outline: none;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
 }
 
@@ -1339,14 +1401,14 @@ body {
   color: rgba(255, 255, 255, 0.6);
 }
 
-.reset:active {
+.reset:focus {
   border: 3px solid #83B3D3;
   border-radius: 4px;
+  outline: none;
 }
 
-.reset:focus {
-  color: rgba(255, 255, 255, 0.6);
-  outline: none;
+.reset:active {
+  color: rgba(255, 255, 255, 0.3);
 }
 
 /* СОРТИРОВКА КАТАЛОГА ГОСТИНИЦ */
@@ -1387,9 +1449,13 @@ body {
   background-position: right 17px center;
 }
 
-.sort-by-price:hover,
+.sort-by-price:hover {
+  border: 2px solid #68A2CA;
+}
+
 .sort-by-price:focus {
   border: 2px solid #68A2CA;
+  outline: none;
 }
 
 .sort-by-price:active {
@@ -1441,6 +1507,7 @@ body {
 
 .button-view:focus {
   border: 2px solid #68A2CA;
+  outline: none;
 }
 
 .view-current {
@@ -1457,7 +1524,7 @@ body {
   list-style-type: none;
 }
 
-.hotel-card-content {
+.hotel-card {
   display: grid;
   grid-template-columns: 140px 140px;
   column-gap: 20px;
@@ -1468,6 +1535,10 @@ body {
 .hotel-catalog-link {
   grid-column: 1 / 3;
   text-decoration: none;
+}
+
+.hotel-catalog-link:focus {
+  outline: none;
 }
 
 .hotel-card-image {
@@ -1634,10 +1705,15 @@ body {
   color: #ffffff;
 }
 
-.pagination-link:hover,
+.pagination-link:hover {
+  background-color: #68A2CA;
+  border-radius: 4px;
+}
+
 .pagination-link:focus {
   background-color: #68A2CA;
   border-radius: 4px;
+  outline: none;
 }
 
 .pagination-link:active {
@@ -1650,15 +1726,6 @@ body {
 .pagination-current:active {
   color: #000000;
   background-color: #F2F2F2;;
-  border-radius: 4px;
-}
-
-.pagination-ellipsis,
-.pagination-ellipsis:hover,
-.pagination-ellipsis:focus,
-.pagination-ellipsis:active {
-  color: #ffffff;
-  background-color: #82B3D3;
   border-radius: 4px;
 }
 
@@ -1684,9 +1751,13 @@ body {
   background-position: right 18px center;
 }
 
-.amount-cards:hover,
+.amount-cards:hover {
+  border: 2px solid #68A2CA;
+}
+
 .amount-cards:focus {
   border: 2px solid #68A2CA;
+  outline: none;
 }
 
 .amount-cards:active {
