--- a/styles/styles.css
+++ b/styles/styles.css
@@ -480,6 +480,7 @@ body {
 /* БЛОК ПОДПИСКИ */
 .subscription {
   display: flex;
+  min-height: 411px;
   flex-direction: column;
   align-items: center;
   text-align: center;
@@ -503,7 +504,7 @@ body {
 
 .subscription-form {
   display: flex;
-  margin-bottom: 94px;
+  margin-bottom: 50px;
 }
 
 .subscription-input {
@@ -1437,14 +1438,14 @@ body {
   position: relative;
   box-sizing: border-box;
   width: 290px;
-  min-height: 49px;
   margin-right: 78px;
-  padding-left: 18px;
+  padding: 12px 0 12px 18px;
   cursor: pointer;
   border: 2px solid #E5E5E5;
   border-radius: 4px;
   appearance: none;
   background-image: url('../images/select-arrow.svg');
+  background-color: #ffffff;
   background-repeat: no-repeat;
   background-position: right 17px center;
 }
@@ -1740,13 +1741,14 @@ body {
 .amount-cards {
   position: relative;
   width: 160px;
-  min-height: 49px;
-  padding-left: 18px;
+  /* min-height: 49px; */
+  padding: 12px 0 12px 18px;
   cursor: pointer;
   border: 2px solid #E5E5E5;
   border-radius: 4px;
   appearance: none;
   background-image: url('../images/select-arrow.svg');
+  background-color: #ffffff;
   background-repeat: no-repeat;
   background-position: right 18px center;
 }
